Added dynamic playlist toggling button under playlist

--- a/icons/crystal_amarok/iconset.conf
+++ b/icons/crystal_amarok/iconset.conf
@@ -1,6 +1,6 @@
 [Iconset]
 Name="Crystal + Amarok"
-Author="KDE team, Amarok team and Håvard Tautra Knutsen."
+Author="KDE team, Amarok team and HÃ¥vard Tautra Knutsen."
 License="See icon subfolder 'COPYING' files."
 Description="The default icon set. Based on Crystal and Amarok icons."
 
@@ -33,6 +33,7 @@ jumpto=crystal/goto.png
 queue=add.png
 dequeue=remove.png
 shuffle=amarok/shuffle.png
+dynamicon=crystal/goto.png
 saveas=crystal/saveas.png
 remove=remove.png
 crop=crop.png
