--- a/icons/oxygen/iconset.conf
+++ b/icons/oxygen/iconset.conf
@@ -29,6 +29,7 @@ clearline=edit-clear.png
 
 random=roll.png
 repeat=task-recurring.png
+dynamicon=games-solve.png
 jumpto=go-jump.png
 queue=list-add.png
 dequeue=list-remove.png
@@ -44,7 +45,7 @@ lookandfeel=fill-color.png
 icons=preferences-desktop-icons.png
 styles=preferences-desktop-theme.png
 language=preferences-desktop-locale.png
-dynamicplaylist=go-jump.png
+dynamicplaylist=games-solve.png
 notifications=preferences-desktop-notification.png
 shortcuts=preferences-desktop-keyboard.png
 tagguesser=feed-subscribe.png
