Added dynamic playlist icon

--- a/icons/crystal_amarok/iconset.conf
+++ b/icons/crystal_amarok/iconset.conf
@@ -39,13 +39,14 @@ remove=remove.png
 crop=crop.png
 clear=removeall.png
 delete=remove.png
+dynamic=dynamic.png
 
 server=crystal/server.png
 lookandfeel=crystal/looknfeel.png
 icons=crystal/icons.png
 styles=crystal/style.png
 language=crystal/locale.png
-dynamicplaylist=crystal/goto.png
+dynamicplaylist=dynamic.png
 notifications=crystal/info.png
 shortcuts=crystal/key_bindings.png
 tagguesser=crystal/help.png
