--- a/qmpdclient.desktop
+++ b/qmpdclient.desktop
@@ -4,4 +4,5 @@ Name=QMPDClient
 GenericName=A nicer MPD client
 Exec=qmpdclient
 Categories=Qt;Network;Music;
+Icon=qmpdclient64.png
 Terminal=false
