Modified .desktop file

--- a/qmpdclient.desktop
+++ b/qmpdclient.desktop
@@ -1,7 +1,8 @@
 [Desktop Entry]
 Type=Application
 Name=QMPDClient
-GenericName=A nicer MPD client
+GenericName=Qt4 based MPD client
+Comment=A nicer MPD client
 Exec=qmpdclient
 Categories=Qt;Network;Music;
 Icon=qmpdclient64.png
