Install desktop file only on UNIX

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -261,5 +261,7 @@ target_link_libraries(qmpdclient ${QT_LIBRARIES})
 
 install(FILES ${COMPILED_TRANSLATIONS} DESTINATION share/QMPDClient/translations)
 install(TARGETS qmpdclient DESTINATION bin)
-install(FILES qmpdclient.desktop DESTINATION share/applications)
-install(FILES icons/qmpdclient64.png DESTINATION share/icons)
+if(UNIX)
+	install(FILES qmpdclient.desktop DESTINATION share/applications)
+	install(FILES icons/qmpdclient64.png DESTINATION share/icons)
+endif()
