CMake fixes for older Qt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 
 find_package(Qt4 4.3.0 COMPONENTS QtCore QtGui QtNetwork REQUIRED QtDBus)
-include(${QT_USE_FILE})
+SET (QT_USE_QTNETWORK TRUE)
 
 if(NOT DEFINED VERSION)
 	find_program (GIT_CMD git)
@@ -186,6 +186,7 @@ if(UNIX)
 	if(NOT MAC)
 		if(QT_QTDBUS_FOUND)
 			message(STATUS "QtDBus found")
+			SET (QT_USE_QTDBUS TRUE)
 			list(APPEND QMPDClient_srcs src/notifications_dbus.cpp)
 		else()
 			message(STATUS "QtDBus not found")
@@ -203,6 +204,7 @@ if(WIN32)
 			src/qmpdclient_win.cpp)
 endif()
 
+include(${QT_USE_FILE})
 qt4_wrap_cpp(QMPDClient_ppd_hdrs ${QMPDClient_hdrs})
 qt4_add_resources(QMPDClient_ppd_res qmpdclient.qrc)
 qt4_wrap_ui(QMPDClient_ppd_uis ${QMPDClient_uis})
