Basic DBus interface: quitting, toggling main window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -208,6 +208,9 @@ if(UNIX)
 			message(STATUS "QtDBus found")
 			SET (QT_USE_QTDBUS TRUE)
 			list(APPEND QMPDClient_srcs src/notifications_dbus.cpp)
+			list(APPEND QMPDClient_srcs src/qdbus_adaptor.cpp)
+			list(APPEND QMPDClient_hdrs src/qdbus_adaptor.h)
+			add_definitions("-DWITH_DBUS")
 		else()
 			message(STATUS "QtDBus not found")
 			list(APPEND QMPDClient_srcs src/notifications_nodbus.cpp)
