"Fixed" lyricsplugin interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(Qt4 4.4.0 COMPONENTS QtCore QtGui QtNetwork QtXml QtXmlPatterns REQ
 SET (QT_USE_QTNETWORK TRUE)
 SET (QT_USE_QTXMLPATTERNS TRUE)
 SET (QT_USE_QTXML TRUE)
+SET (QT_USE_QTWEBKIT TRUE)
 
 if(NOT DEFINED VERSION)
 	find_program (GIT_CMD git)
