--- a/qmpdclient.desktop
+++ b/qmpdclient.desktop
@@ -5,5 +5,5 @@ GenericName=Qt4 based MPD client
 Comment=A nicer MPD client
 Exec=qmpdclient
 Categories=Qt;Network;Music;
-Icon=qmpdclient64.png
+Icon=qmpdclient
 Terminal=false
