--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -254,7 +254,8 @@ target_link_libraries(qmpdclient ${QT_LIBRARIES})
 install(TARGETS qmpdclient DESTINATION bin)
 if(UNIX)
 	install(FILES qmpdclient.desktop DESTINATION share/applications)
-	install(FILES icons/qmpdclient64.png DESTINATION share/icons)
+	install(FILES icons/qmpdclient.png DESTINATION share/icons/hicolor/64x64/apps/)
+	install(FILES icons/svg/qmpdclient.svg DESTINATION share/icons/hicolor/scalable/apps/)
 	install(FILES ${COMPILED_TRANSLATIONS} DESTINATION share/QMPDClient/translations)
 endif()
 if(WIN32)
