--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -281,7 +281,10 @@ target_link_libraries(qmpdclient ${QT_LIBRARIES})
 install(TARGETS qmpdclient DESTINATION bin)
 if(UNIX)
 	install(FILES qmpdclient.desktop DESTINATION share/applications)
-	install(FILES icons/qmpdclient.png DESTINATION share/icons/hicolor/64x64/apps/)
+	install(FILES icons/64x64/qmpdclient.png DESTINATION share/icons/hicolor/64x64/apps/)
+	install(FILES icons/48x48/qmpdclient.png DESTINATION share/icons/hicolor/48x48/apps/)
+	install(FILES icons/22x22/qmpdclient.png DESTINATION share/icons/hicolor/22x22/apps/)
+	install(FILES icons/16x16/qmpdclient.png DESTINATION share/icons/hicolor/16x16/apps/)
 	install(FILES icons/svg/qmpdclient.svg DESTINATION share/icons/hicolor/scalable/apps/)
 	install(FILES ${COMPILED_TRANSLATIONS} DESTINATION share/QMPDClient/translations)
 endif()
