--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,11 @@
 cmake_minimum_required(VERSION 2.6)
 
-find_package(Qt4 4.4.0 COMPONENTS QtCore QtGui QtNetwork QtXml QtXmlPatterns REQUIRED QtDBus X11)
+find_package(Qt4 4.4.0 COMPONENTS QtCore QtGui QtNetwork QtXml QtXmlPatterns REQUIRED QtDBus)
+if(UNIX)
+	if(NOT MAC)
+		find_package(X11 REQUIRED)
+	endif()
+endif()
 
 SET (QT_USE_QTNETWORK TRUE)
 SET (QT_USE_QTXMLPATTERNS TRUE)
@@ -279,6 +284,11 @@ add_definitions(-DNAMEVER="${NAMEVER}" -DPREFIX="${CMAKE_INSTALL_PREFIX}" -DVERS
 add_executable(qmpdclient ${QMPDClient_srcs} ${QMPDClient_ppd_hdrs} ${QMPDClient_ppd_uis} ${QMPDClient_ppd_res} ${COMPILED_TRANSLATIONS})
 
 target_link_libraries(qmpdclient ${QT_LIBRARIES})
+if(UNIX)
+	if(NOT MAC)
+		target_link_libraries(qmpdclient ${X11_LIBRARIES})
+	endif()
+endif()
 
 install(TARGETS qmpdclient DESTINATION bin)
 if(UNIX)
