CMakeLists.txt: correctly link under Win32

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -288,6 +288,9 @@ if(UNIX)
 		target_link_libraries(qmpdclient ${X11_LIBRARIES})
 	endif()
 endif()
+if(WIN32)
+	target_link_libraries(qmpdclient ws2_32)
+endif()
 
 install(TARGETS qmpdclient DESTINATION bin)
 if(UNIX)
