CMakeLists.txt: install executable file into root folder instead of bin on Win32
This is required to correctly detect translation files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -297,8 +297,8 @@ if(WIN32)
 	set_target_properties(qmpdclient PROPERTIES WIN32_EXECUTABLE TRUE)
 endif()
 
-install(TARGETS qmpdclient DESTINATION bin)
 if(UNIX)
+	install(TARGETS qmpdclient DESTINATION bin)
 	install(FILES qmpdclient.desktop DESTINATION share/applications)
 	install(FILES icons/64x64/qmpdclient.png DESTINATION share/icons/hicolor/64x64/apps/)
 	install(FILES icons/48x48/qmpdclient.png DESTINATION share/icons/hicolor/48x48/apps/)
@@ -308,5 +308,6 @@ if(UNIX)
 	install(FILES ${COMPILED_TRANSLATIONS} DESTINATION share/QMPDClient/translations)
 endif()
 if(WIN32)
+	install(TARGETS qmpdclient DESTINATION .)
 	install(FILES ${COMPILED_TRANSLATIONS} DESTINATION translations)
 endif()
