CMakeLists.txt: add resource.rc to sources on WIN32

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -230,7 +230,7 @@ endif()
 
 if(WIN32)
 	list(APPEND QMPDClient_srcs src/notifications_nodbus.cpp
-			src/qmpdclient_win.cpp)
+			src/qmpdclient_win.cpp icons/resource.rc)
 endif()
 
 include(${QT_USE_FILE})
